headers/physics/orxBody.h

typedef struct __orxBODY_t        orxBODY;
typedef struct __orxBODY_JOINT_t        orxBODY_JOINT;


/** Gets the reaction torque on the attached body
 * @param[in]   _pstBodyJoint   Concerned body joint
 * @return      Reaction torque
 */
extern orxDLLAPI orxFLOAT orxFASTCALL         orxBody_GetJointReactionTorque(const orxBODY_JOINT *_pstBodyJoint);



/** Issues a raycast to test for potential bodies in the way
 * @param[in]   _pvBegin        Beginning of raycast
 * @param[in]   _pvEnd          End of raycast
 * @param[in]   _u16SelfFlags   Selfs flags used for filtering (0xFFFF for no filtering)
 * @param[in]   _u16CheckMask   Check mask used for filtering (0xFFFF for no filtering)
 * @param[in]   _bEarlyExit     Should stop as soon as an object has been hit (which might not be the closest)
 * @param[in]   _pvContact      If non-null and a contact is found it will be stored here
 * @param[in]   _pvNormal       If non-null and a contact is found, its normal will be stored here
 * @return Colliding orxBODY / orxNULL
 */
extern orxDLLAPI orxBODY *orxFASTCALL         orxBody_Raycast(const orxVECTOR *_pvBegin, const orxVECTOR *_pvEnd, orxU16 _u16SelfFlags, orxU16 _u16CheckMask, orxBOOL _bEarlyExit, orxVECTOR *_pvContact, orxVECTOR *_pvNormal);



/** Picks bodies in contact with the given axis aligned box.
 * @param[in]   _pstBox                               Box used for picking
 * @param[in]   _u16SelfFlags                         Selfs flags used for filtering (0xFFFF for no filtering)
 * @param[in]   _u16CheckMask                         Check mask used for filtering (0xFFFF for no filtering)
 * @param[in]   _apstBodyList                         List of bodies to fill
 * @param[in]   _u32Number                            Number of bodies
 * @return      Count of actual found bodies. It might be larger than the given array, in which case you'd need to pass a larger array to retrieve them all.
 */
extern orxDLLAPI orxU32 orxFASTCALL           orxBody_BoxPick(const orxAABOX *_pstBox, orxU16 _u16SelfFlags, orxU16 _u16CheckMask, orxBODY *_apstBodyList[], orxU32 _u32Number);