headers/base/orxType.h


  typedef unsigned  int           orxU32;

  typedef unsigned  short         orxU16;


  typedef unsigned  int           orxBOOL;

  typedef unsigned  long          orxU32;

  typedef unsigned  short         orxU16;


  typedef unsigned  long          orxBOOL;

  typedef float                   orxFLOAT;

    typedef unsigned  int         orxU32;

    typedef unsigned  short       orxU16;


    typedef unsigned  int         orxBOOL;

    typedef unsigned  long        orxU32;

    typedef unsigned  short       orxU16;


    typedef unsigned  long        orxBOOL;

    typedef float                 orxFLOAT;

static const orxU32               orxU32_UNDEFINED      = (orxU32)(-1);

static const orxU16               orxU16_UNDEFINED      = (orxU16)(-1);