src/norx/body.nim


proc orxBody_GetJointReactionTorque*(pstBodyJoint: ptr orxBODY_JOINT): orxFLOAT {.
    cdecl, importc: "orxBody_GetJointReactionTorque", dynlib: libORX.}
## * Issues a raycast to test for potential bodies in the way
##  @param[in]   _pvBegin        Beginning of raycast
##  @param[in]   _pvEnd          End of raycast
##  @param[in]   _u16SelfFlags   Selfs flags used for filtering (0xFFFF for no filtering)
##  @param[in]   _u16CheckMask   Check mask used for filtering (0xFFFF for no filtering)
##  @param[in]   _bEarlyExit     Should stop as soon as an object has been hit (which might not be the closest)
##  @param[in]   _pvContact      If non-null and a contact is found it will be stored here
##  @param[in]   _pvNormal       If non-null and a contact is found, its normal will be stored here
##  @return Colliding orxBODY / nil
##

proc orxBody_Raycast*(pvBegin: ptr orxVECTOR; pvEnd: ptr orxVECTOR;
                     u16SelfFlags: orxU16; u16CheckMask: orxU16;
                     bEarlyExit: orxBOOL; pvContact: ptr orxVECTOR;
                     pvNormal: ptr orxVECTOR): ptr orxBODY {.cdecl,
    importc: "orxBody_Raycast", dynlib: libORX.}
## * Picks bodies in contact with the given axis aligned box.
##  @param[in]   _pstBox                               Box used for picking
##  @param[in]   _u16SelfFlags                         Selfs flags used for filtering (0xFFFF for no filtering)
##  @param[in]   _u16CheckMask                         Check mask used for filtering (0xFFFF for no filtering)
##  @param[in]   _apstBodyList                         List of bodies to fill
##  @param[in]   _u32Number                            Number of bodies
##  @return      Count of actual found bodies. It might be larger than the given array, in which case you'd need to pass a larger array to retrieve them all.
##

proc orxBody_BoxPick*(pstBox: ptr orxAABOX; u16SelfFlags: orxU16;
                     u16CheckMask: orxU16; apstBodyList: ptr ptr orxBODY;
                     u32Number: orxU32): orxU32 {.cdecl, importc: "orxBody_BoxPick",
    dynlib: libORX.}
## * @}
